# rs-mock

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Makefile  README.md  pyproject.toml  release-please-config.json
.claude/skills/ci-do/: SKILL.md
.github/workflows/: ci.yml  release-please.yml
scripts/: check_commit_msg.py
src/rs_mock/: __init__.py  _psycopg2.py  _s3.py  mock.py
tests/: conftest.py  test_integration.py  test_mock.py  test_property.py  test_psycopg2_compat.py  test_psycopg2_unit.py  test_s3.py  test_unit.py  test_unsupported.py
