[project]
name = "rs-mock"
version = "0.1.0"
description = "Mock Redshift locally by transpiling Redshift SQL to DuckDB and running it."
readme = "README.md"
authors = [
    { name = "Tyler Riccio", email = "tylerriccio8@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "sqlglot>=30.12.0",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.2",
    "prek>=0.4.8",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "pytest-testmap>=0.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
]
