[project]
name = "rs-mock"
version = "0.1.0"
description = "Mock Redshift locally by transpiling Redshift SQL to DuckDB and running it."
readme = "README.md"
authors = [
    { name = "Tyler Riccio", email = "tylerriccio8@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "sqlglot>=30.12.0",
]

[project.optional-dependencies]
s3 = [
    "boto3>=1.34",
]

[build-system]
requires = ["uv_build>=0.11.18,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "hypothesis>=6.156.2",
    "moto[s3]>=5.0",
    "prek>=0.4.8",
    "pyrefly>=1.1.1",
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "pytest-testmap>=0.3.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.20",
    "testmap>=0.5.0",
    "tox>=4.23.2",
    "tox-uv>=1.16.0",
]

[tool.testmap]
kinds = ["unit", "integration", "property"]
required = ["unit", "integration"]

[tool.testmap.features]
s3 = { exclude = ["unit", "property"] }
unsupported_detection = { exclude = ["unit", "property"] }

[tool.tox]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
description = "run tests on {base_python}"
dependency_groups = ["dev"]
commands = [["pytest", { replace = "posargs", extend = true }]]
